--- a/.verb.md
+++ b/.verb.md
@@ -20,6 +20,15 @@ last(['a', 'b', 'c', 'd', 'e', 'f'], 3);
 //=> ['d', 'e', 'f']
 ```
 
+## Related projects
+{%= related(verb.related.list) %}  
+
+## Running tests
+{%= include("tests") %}
+
+## Contributing
+{%= include("contributing") %}
+
 ## Author
 {%= include("author") %}
 
